# journali-api

./: Cargo.toml  Dockerfile  Migrator.Dockerfile  README.md  Rocket.toml  rustfmt.toml
.github/: .kodiak.toml  dependabot.yml
.github/workflows/: codecov.yml  deploy.yml  rust.yml
migrations/2020-05-12-101415_create_users/: up.sql
migrations/2020-05-12-113222_create_items_and_pages_tables/: down.sql  up.sql
migrations/2020-05-12-121415_create_users/: up.sql
migrations/2020-05-13-111608_create_todos_tables/: down.sql  up.sql
migrations/2020-05-13-150547_create_textfield_table/: down.sql  up.sql
migrations/2020-05-14-111940_use_diesel_updated_at_triggers/: down.sql  up.sql
migrations/2020-05-19-154106_add_coordinate_columns/: down.sql  up.sql
migrations/2020-05-21-125203_add_owned_id_fk/: down.sql  up.sql
migrations/2020-06-03-124747_tags/: down.sql  up.sql
migrations/2020-06-03-145523_add_due_date_column_to_items/: down.sql  up.sql
src/: database.rs  lib.rs  schema.rs  testing.rs
src/controllers/: mod.rs  pages_controller.rs
src/item/: item.rs  mod.rs  page.rs
src/items/: crud.rs  crud2.rs  item.rs  macros.rs  mod.rs  page.rs  text_field.rs  todo.rs  todo_item.rs  traits.rs
src/models/: mod.rs
src/repositories/: items_repository.rs  mod.rs  pages_repository.rs
src/tags/: mod.rs  tag.rs  tags.rs  tags_items.rs
src/users/: user.rs
src/utils/: jwt.rs  mod.rs  responsable.rs
