[package]
name = "journali-api"
version = "0.1.0"
authors = ["Dodo <kasper199914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "*"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2"] }
dotenv = "*"
load-dotenv = "*"

[features]
# Treat warnings as a build error
strict = []