[package]
name = "journali-api"
version = "0.1.0"
authors = ["Dodo <kasper199914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "*"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "*"
load-dotenv = "*"
uuid = { version="*", features= ["serde", "v4"] }
serde = "*"
chrono = {version = "*", features = ["serde"]}
jsonwebtoken = "7.1.0"
bcrypt = "0.8.0"

[features]
# Treat warnings as a build error
strict = []
