[package]
name = "journali-api"
version = "1.0.0"
authors = [
"Dodo <kasper199914@gmail.com>",
"Wesley <wesley19097@gmail.com> (https://wesley.io)"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-web-httpauth = "*"
env_logger = "*"
log = "*"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "*"
load-dotenv = "*"
uuid = { version="*", features= ["serde", "v4"] }
serde = "*"
serde_json = "*"
chrono = {version = "*", features = ["serde"]}
jsonwebtoken = "7.1.2"
bcrypt = "0.10.1"

[features]
# Treat warnings as a build error
strict = []
